--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/erizo.webp" />
-    <link rel="icon" type="image/png" href="/erizo.webp" />
-    <link rel="apple-touch-icon" href="/erizo.webp" />
+    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACPKJ6JK3JHM3YBAFAX65EAWZTGG7EA" />
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACPKJ6JK3JHM3YBAFAX65EAWZTGG7EA" />
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACPKJ6JK3JHM3YBAFAX65EAWZTGG7EA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="página web de bebidas con boba.">
     <title>BO·CHA Huajuapan</title>
     <link rel="preload" href="https://images.pexels.com/photos/992734/pexels-photo-992734.jpeg?auto=compress&cs=tinysrgb&w=4608&h=3072&dpr=1" as="image" />
     <link rel="preload" href="https://images.pexels.com/photos/6412841/pexels-photo-6412841.jpeg?auto=compress&cs=tinysrgb&w=3839&h=5759&dpr=1" as="image" />
