--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/erizo.webp" />
     <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACPKJ6JK3JHM3YBAFAX65EAWZTGG7EA" />
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACPKJ6JK3JHM3YBAFAX65EAWZTGG7EA" />
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACPKJ6JK3JHM3YBAFAX65EAWZTGG7EA" />
