--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp" />
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp" />
-    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp" />
+    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACS3NQJ7H5VNUB25QVQSS6OMZTGUKGA" />
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACS3NQJ7H5VNUB25QVQSS6OMZTGUKGA" />
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Damanger/Bocha/main/public/erizo.webp?token=GHSAT0AAAAAACS3NQJ7H5VNUB25QVQSS6OMZTGUKGA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="página web de bebidas con boba.">
     <title>BO·CHA Huajuapan</title>
