--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preload" href="https://images.pexels.com/photos/7535456/pexels-photo-7535456.jpeg?auto=compress&cs=tinysrgb&w=2266&h=3393&dpr=1" as="image" />
     <link rel="preload" href="https://images.pexels.com/photos/6412836/pexels-photo-6412836.jpeg?auto=compress&cs=tinysrgb&w=3578&h=5367&dpr=1" as="image" />
     <link rel="preload" href="https://images.pexels.com/photos/6412837/pexels-photo-6412837.jpeg?auto=compress&cs=tinysrgb&w=3839&h=5759&dpr=1" as="image" />
+    <link rel="preload" href="https://images.pexels.com/photos/4041246/pexels-photo-4041246.jpeg?auto=compress&cs=tinysrgb&w=6305&h=4203&dpr=2" as="image" />
   </head>
   <body>
     <div id="root"></div>
